@@ -618,7 +618,7 @@ ICEDTEA_ENV = \
 	STATIC_CXX="false" \
 	BUILD_GCC="$(CC)" \
 	BUILD_CXX="$(CXX)" \
-	SYSTEM_CUPS="true" \
+	SYSTEM_CUPS="${ENABLE_SYSTEM_CUPS}" \
 	CUPS_LIBS="${CUPS_LIBS}" \
 	CUPS_CFLAGS="${CUPS_CFLAGS}" \
 	STRIP_POLICY=no_strip \
