@@ -14,6 +14,8 @@ CVE-XXXX-YYYY: http://www.cve.mitre.org/cgi-bin/cvename.cgi?name=XXXX-YYYY
 
 New in release 2.6.5 (2016-04-XX):
 
+* Bug fixes
+  - PR2803: Make system CUPS optional
 * CACAO
   - PR2781, CA195: typeinfo.cpp: typeinfo_merge_nonarrays: Assertion `dest && result && x.any && y.any' failed
 
